--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -24,10 +24,9 @@ Besides running scenarios in the virtual lab, the following should be done per c
   * Define clear responsibilities of all notebook cells, methods and classes.
 
 ### Validation phase milestones
-The submission for publication of one or two papers:
-
-1. A paper in the ecosystem domain presenting the scenarios run in the virtual lab.
-2. A technical paper focusing on the infrastructure part of the virtual research environment.
+* The submission for publication of a paper in the ecosystem domain presenting the scenarios run in the virtual lab.
+* The lab becoming publicly available.
+* Potentially also the submission for publication of a technical paper focusing on the infrastructure part of the virtual research environment.
 
 Additionally, the virtual lab should be made publicly available.
 
@@ -36,7 +35,7 @@ The following roles should be assigned during the validation phase:
 
 * Virtual lab owner / Principal investigator: Uses the virtual lab to do their research. Publishes a paper in the ecosystem domain.
 * Virtual lab core developers: Provide support to the virtual lab owner.
-* Networked infrastructures scientist: Publishes a technical paper.
+* VRE researcher: Publishes a technical paper.
 * Virtual lab trainer: Once the virtual lab owner, and reviewers believe the virtual lab to be ready to be used by others,
 the virtual lab trainer tries out the virtual lab and makes suggestions. Helps the virtual lab owner identify issues arising when others start using the virtual lab.
 * VRE DevOps engineer: Support the core developers and golden user by providing advise and changing the virtual research environment where necessary.
