--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -49,22 +49,27 @@ one role for the virtual lab, while others might have multiple of the following 
   * **Virtual lab visitor:** Visits the virtual lab to see how experiments were done and what is possible in the virtual lab.
 * **Virtual lab support roles:** Roles to support development and use of virtual labs.
   * **Virtual lab trainer:** Knows the lab from a user viewpoint and provides trainings to new users. This role will often be assigned to a person who is also the virtual lab owner, a core developer, or service operator.
-  * **Virtual lab technical coordinator:** Knows the lab from a technical perspective and pushes the lab to the next readiness level. Often, this will be an employee at LifeWatch ERIC VLIC
-  * **Virtual lab service operator:** Can support users. Knows the potential and limitations of the lab and can help out when problems arise.
+  * **Virtual lab coordinator:** Knows the lab from a technical perspective and pushes the lab to the next readiness level. Often, this will be an employee at LifeWatch ERIC VLIC
+  * **Community supporter:** Forms connections between users and the virtual lab.
   * **Virtual research environment development and operations (VRE DevOps) engineer:** Maintains NaaVRE. Often, this will be an employee at LifeWatch ERIC VLIC.
-  * **Networked infrastructures scientist:** Contribute state-of-the-art components to the NaaVRE and can publish technical papers
+  * **VRE researcher:** Contribute state-of-the-art components to the NaaVRE and can publish technical papers
   that demonstrate the relevance of NaaVRE in the field of networked systems.
+  * **User supporter:** Can support users. Knows the potential and limitations of the lab and can help out when problems arise.
+  * **Infrastructure supporter:** Ensures there is infrastructure that allows the virtual lab to be used by multiple users.
+  * **Infrastructure provider:** Provides infrastructure for the virtual lab.
 
 ## Readiness levels
 We discern five readiness levels in the development of a virtual lab.
 For each higher readiness level improvements are be made to the assets and documents in order to make the lab usable by others
 with an increasing amount of independence from the virtual lab core developers and VRE DevOps team.
 
-* [L0 - Initial proposal](readiness_levels/L0_initial_proposal): The initial proposal of a virtual lab, with conceptual definition but no technical setup.
-* [L1 - Co-development](readiness_levels/L1_co-development): A provisioned virtual lab is ready for the development team to implement the virtual lab functionality, e.g. new components, workflows, or experiments.
-* [L2 - Validation phase](readiness_levels/L2_validation_phase): A provisioned virtual lab with developed components. It is ready to run scientific experiments to validate the virtual lab and write scientific publications..
-* [L3 - Workshop use](readiness_levels/L3_workshop_use): A provisioned virtual lab with validated components and scientific stories. It is ready to engage more users through training and hackathons under controlled conditions. .
-* [L4 - Operational service](readiness_levels/L4_operational_service): A provisioned virtual lab on operational infrastructure. It is ready to be operational for serving users from the general public.
+<ul style={{ listStyleType: 'none' }}>
+    <li> ⬇️ [L0 - Initial proposal](readiness_levels/L0_initial_proposal): The initial proposal of a virtual lab, with conceptual definition but no technical setup. </li>
+    <li> ⬇️ [L1 - Co-development](readiness_levels/L1_co-development): A provisioned virtual lab is ready for the development team to implement the virtual lab functionality, e.g. new components, workflows, or experiments. </li>
+    <li> ⬇️ [L2 - Validation phase](readiness_levels/L2_validation_phase): A provisioned virtual lab with developed components. It is ready to run scientific experiments to validate the virtual lab and write scientific publications. </li>
+    <li> ⬇️ [L3 - Workshop use](readiness_levels/L3_workshop_use): A provisioned virtual lab with validated components and scientific stories. It is ready to engage more users through training and hackathons under controlled conditions. </li>
+    <li> ⬇️ [L4 - Operational service](readiness_levels/L4_operational_service): A provisioned virtual lab on operational infrastructure. It is ready to be operational for serving users from the general public. </li>
+</ul>
 
 | Level | Name                | Duration    | Developers                  | Users | Context dissemination            | Entering condition                                                     | Exit condition                                                                     |
 |-------|---------------------|-------------|-----------------------------|-------|----------------------------------|------------------------------------------------------------------------|------------------------------------------------------------------------------------|
