--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -32,6 +32,7 @@ The following roles are involved in a initial proposal:
 
 * Virtual lab owner / Principal investigator: Comes with a use case that will serve as the first application of the virtual lab.
 Recruits a core development team.
+* Community supporter: Reaches out to domain scientists who have the potential  of becoming new virtual lab principal investigators.
 * VRE DevOps engineer: Establish if NaaVRE can support to use case. Create an empty new virtual lab.
 
 ### Initial proposal milestones
