--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -18,8 +18,8 @@ The following responsibilities should be assigned during workshop use:
 
 * Virtual lab owner / Principal investigator: Gathers user feedback and determines how to facilitate other users in the virtual lab.
 * Virtual lab trainer: Gives trainings to users. Can point out what the user can change and can not change in the lab.
-* Virtual lab technical coordinator: Answers any technical questions arising from the workshop use which the trainer can not answer.
-Has been involved as VRE DevOps engineer during the previous stages.
+* User supporter: Answers any technical questions arising from the workshop use which the trainer can not answer.
+* Infrastructure supporter: Ensures the infrastructure can support the training sessions.
 
 ### From workshop use to operational service
 The virtual lab is an operational service if all previous criteria apply and additionally the following criteria apply:
