--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -20,5 +20,6 @@ they can contact LifeWatch to discuss the possibilities of creating a new virtua
 The following responsibilities should be assigned when the virtual lab is an operational service:
 
 * Virtual lab owner / Principal investigator: Coordinates the further development of the virtual lab with a scientific vision.
-* Virtual lab service operator: Is the primary point of contact in case any problems arise with the virtual lab.
-* Virtual lab technical coordinator: Ensures the VRE keeps supporting the virtual lab.
+* User supporter: Is the primary point of contact in case any problems arise with the virtual lab.
+* Virtual lab coordinator: Ensures the VRE keeps supporting the virtual lab.
+* Infrastructure supporter: Monitors, provides, and adjusts infrastructure for the virtual lab.
