#271 Adapt roles, adapt L0 text
Explicitly mention golden, silver and ivory user.

--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -2,10 +2,13 @@
 sidebar_position: 1
 title: L0 - initial proposal
 ---
-The idea of a new virtual lab is spawned by a domain scientist. They pitch the idea to the NaaVRE DevOps team.
+### Start
+A new virtual lab starts with potential (golden) users who are willing to use NaaVRE to conduct research.
+They will be selected, or reached out. The (golden) user will propose a virtual lab based on a scientific story
+and technical starting point.
 If a NaaVRE virtual lab seems the best platform to conduct the research,
-the domain scientist and NaaVRE DevOps team work out the idea further, recruit a team of core developers,
-and establish a timeline for the virtual lab.
+the potential (golden) users and NaaVRE DevOps team work out the idea further, recruit a team of core developers,
+establish ambitions, and make a timeline for the virtual lab.
 
 ### During the initial proposal phase
 The following things should be done to work out the initial proposal to a concrete virtual lab:
@@ -42,8 +45,11 @@ The following milestones can be achieved during the phase L0 of virtual lab deve
 * The creation of a new empty virtual lab.
 
 ### From initial proposal to co-development
-To transition from initial proposal to co-development the following should be done:
+To transition from initial proposal to co-development an ambitious but realistic virtual lab proposal should exist.
+The following should be done:
 
+* Ambition
+  - [ ] There is an ambitious and realistic plan for the virtual lab.
 * Timeline
   - [ ] A timeline exists for the co-development, validation of the virtual lab and development of training material.
 * Codebase
