--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -3,6 +3,7 @@
 import Downward_arrow from './images/Downward_arrow.drawio.svg';
 
 Version 0.0.2
+co-development
 
 The NaaVRE platform facilitates data- and computing-centric research activities by enabling scientists to create customizable virtual labs for specific scientific purposes.
 A collaborative effort between domain specialists,  computational scientists, data scientists, and development and operations engineers
@@ -44,11 +45,11 @@ one role for the virtual lab, while others might have multiple of the following 
   * **Virtual lab code reviewers:** Provide feedback during co-development on the user-friendliness, maintainability, and robustness of the
   source code and other assets.
 * **Virtual lab usage roles:** Roles of people who use an existing virtual lab for their own research.
-  * **Virtual lab user:** Researchers that couple virtual labs assets, and run their own scenarios in the virtual lab by using their own data and parameters.
-  * **Virtual lab asset developer:** Users who, besides coupling assets and running scenarios, expand and adapt the source code
-  within their own copy of the virtual lab to suit their needs. In the virtual labs the distinction between development
-  and use is a continuum. How many changes a scientist will make to the codebase and libraries depends on whether the virtual lab already has the necessary assets for the user.
-  * **Virtual lab visitor:** Visits the virtual lab to see how experiments were done and what is possible in the virtual lab.
+  * **Golden user:** Provides a scientific scenario that can best be investigated in NaaVRE. Is involved in developing a
+  new virtual lab and conducts research in that virtual lab.
+  * **Silver user:** Starts using a virtual lab developed by others for their own scientific scenarios at an early stage.
+  Learns how to use the virtual lab through a workshop, training or hackathon.
+  * ***Ivory user:** Other users that visit or use the virtual lab in a later stage.
 * **Virtual lab support roles:** Roles to support development and use of virtual labs.
   * **Virtual lab trainer:** Knows the lab from a user viewpoint and provides trainings to new users. This role will often be assigned to a person who is also the virtual lab owner, a core developer, or service operator.
   * **Virtual lab coordinator:** Knows the lab from a technical perspective and pushes the lab to the next readiness level. Often, this will be an employee at LifeWatch ERIC VLIC
