#271 Adapt L0 and L1 text

--- a/docs/readiness_levels/L0_initial_proposal.mdx
+++ b/docs/readiness_levels/L0_initial_proposal.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 title: L0 - initial proposal
 ---
-### Start
+### Start situation
 A new virtual lab starts with potential (golden) users who are willing to use NaaVRE to conduct research.
 They will be selected, or reached out. The (golden) user will propose a virtual lab based on a scientific story
 and technical starting point.
@@ -17,7 +17,8 @@ The following things should be done to work out the initial proposal to a concre
   * Check if the idea research activity can be done in NaaVRE.
 * Team recruitment
   * Find a team of core developers to build the virtual lab.
-* Timeline
+* Plan
+  * Write a development plan for the virtual lab. What scientific scenario will be investigated and what is needed to enable that?
   * Make a timeline for the co-development, validation of the virtual lab and development of training material.
 * Licensing
   * Choose a license for the virtual lab. We recommend using the [Apache license 2.0](https://choosealicense.com/licenses/apache-2.0/),
@@ -33,7 +34,7 @@ you can pick another license. We recommend having a look at https://choosealicen
 ### Initial proposal responsibilities
 The following roles are involved in a initial proposal:
 
-* Virtual lab owner / Principal investigator: Comes with a use case that will serve as the first application of the virtual lab.
+* Golden users: Comes with a use case that will serve as the first application of the virtual lab.
 Recruits a core development team.
 * Community supporter: Reaches out to domain scientists who have the potential  of becoming new virtual lab principal investigators.
 * VRE DevOps engineer: Establish if NaaVRE can support to use case. Create an empty new virtual lab.
@@ -44,13 +45,12 @@ The following milestones can be achieved during the phase L0 of virtual lab deve
 * The core development team becomes complete.
 * The creation of a new empty virtual lab.
 
-### From initial proposal to co-development
+### Exit conditions
 To transition from initial proposal to co-development an ambitious but realistic virtual lab proposal should exist.
 The following should be done:
 
-* Ambition
-  - [ ] There is an ambitious and realistic plan for the virtual lab.
-* Timeline
+* Plan
+  - [ ] There is an ambitious and realistic development plan for the virtual lab.
   - [ ] A timeline exists for the co-development, validation of the virtual lab and development of training material.
 * Codebase
   - [ ] A new virtual lab is created.
