--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -2,7 +2,13 @@
 sidebar_position: 1
 title: L2 - Validation phase
 ---
-Besides running scenarios in the virtual lab, the following should be done per category during the validation phase:
+### Start situation
+At the start of the validation phase, the virtual lab has the required components and the workflow has been developed and tested.
+Additionally the scientific (golden) user has made the data sets ready for the experiments.
+
+### During the validation phase
+The golden user will conduct experiments in the virtual lab in this phase.
+The following should also be done phase:
 
 * Data
   * Make data fair.
@@ -28,8 +34,6 @@ Besides running scenarios in the virtual lab, the following should be done per c
 * The lab becoming publicly available.
 * Potentially also the submission for publication of a technical paper focusing on the infrastructure part of the virtual research environment.
 
-Additionally, the virtual lab should be made publicly available.
-
 ### Validation phase responsibilities
 The following roles should be assigned during the validation phase:
 
@@ -40,8 +44,9 @@ The following roles should be assigned during the validation phase:
 the virtual lab trainer tries out the virtual lab and makes suggestions. Helps the virtual lab owner identify issues arising when others start using the virtual lab.
 * VRE DevOps engineer: Support the core developers and golden user by providing advise and changing the virtual research environment where necessary.
 
-### From the validation phase to workshop use
-The virtual lab can transition to workshop use, if it meets the criteria for co-development, and additionally meets the following requirements:
+### Exit condition
+The virtual lab transitions to workshop use, once the validation has been done and a scientific paper is ready for publication.
+All of the following boxes should be checked, in addition to the criteria for the initial proposal, and co-development:
 
 * Data
   - [ ] All input data of the lab is FAIR.
