#271 Adapt L3 and L4 texts

--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -2,6 +2,13 @@
 sidebar_position: 1
 title: L3 - Workshop use
 ---
+### Start situation
+At the start of level 3, the documentation and scientific publication is ready for silver users to learn the practices in workshops, trainings, and hackathons.
+
+### During the workshop use phase
+During this phase silver users are invited to join workshops, trainings, or hackathons to learn the features and
+ components developed in the virtual lab and conduct their own exercises.
+
 The following should be done during workshop use:
 
 * Documentation
@@ -16,13 +23,16 @@ Additionally, user feedback should be gathered and processed.
 ### Workshop use responsibilities
 The following responsibilities should be assigned during workshop use:
 
-* Virtual lab owner / Principal investigator: Gathers user feedback and determines how to facilitate other users in the virtual lab.
+* Golden users: The golden users who have used the virtual lab for their own investigations,
+will appoint or approve a principal investogator for the virtual lab.
+* Virtual lab principal investigator: Gathers user feedback and determines how to facilitate other users in the virtual lab.
 * Virtual lab trainer: Gives trainings to users. Can point out what the user can change and can not change in the lab.
 * User supporter: Answers any technical questions arising from the workshop use which the trainer can not answer.
 * Infrastructure supporter: Ensures the infrastructure can support the training sessions.
 
-### From workshop use to operational service
-The virtual lab is an operational service if all previous criteria apply and additionally the following criteria apply:
+### Exit conditions
+The virtual lab becomes an operational service if the training material and guidelines are ready for normal (ivory) users to use.
+All previous criteria apply in addition to the following:
 
 * Dependencies
   * [ ] Dependencies are specified. The dependencies are in the dockerfile of the virtual lab,
