--- a/docs/readiness_levels/L4_operational_service.mdx
+++ b/docs/readiness_levels/L4_operational_service.mdx
@@ -2,6 +2,12 @@
 sidebar_position: 1
 title: L4 - Operational service
 ---
+### Start situation
+At the start of the operational service phase, the lab has been tested by multiple users and the documentation has matured.
+
+### During operational service
+In this phase the virtual lab has been industrialized and is provisioned on the research infrastructure.
+
 The following should be done during operational service:
 
 * Expand and adapt the virtual lab where useful or necessary.
