--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -44,7 +44,7 @@ one role for the virtual lab, while others might have multiple of the following 
   Learns how to use the virtual lab through a workshop, training or hackathon.
   * ***Ivory user:** Other users that visit or use the virtual lab in a later stage.
 * **Virtual lab development roles:** Roles involved in the creation of a new virtual lab.
-  * **Virtual lab owner / Principal investigator:** Coordinates the development of the virtual lab with a scientific vision.
+  * **Virtual lab principal investigator:** Coordinates the development of the virtual lab with a scientific vision.
   This will often be the golden user, i.e. the person that provides the initial publishable use case of the virtual lab.
   * **Virtual lab core developers:** Develop a new virtual lab in NaaVRE. Often the virtual lab owner will be one of the core developers.
   * **Virtual lab code reviewers:** Provide feedback during co-development on the user-friendliness, maintainability, and robustness of the
