#271 Name reasons to archive a VL

--- a/docs/readiness_levels/L2_validation_phase.mdx
+++ b/docs/readiness_levels/L2_validation_phase.mdx
@@ -46,8 +46,12 @@ the virtual lab trainer tries out the virtual lab and makes suggestions. Helps t
 
 ### Exit condition
 The virtual lab transitions to workshop use, once the validation has been done and a scientific paper is ready for publication.
-All of the following boxes should be checked, in addition to the criteria for the initial proposal, and co-development:
+It is important to find out who would be potential silver users of the virtual lab. In case no match between the virtual lab
+and potential silver users can be found, the virtual lab should be archived.
+To advance to workshop use, all of the following boxes should be checked, in addition to the criteria for the initial proposal, and co-development:
 
+* User community
+  - [ ] Other potential users have been identified.
 * Data
   - [ ] All input data of the lab is FAIR.
 * Metadata
