--- a/docs/readiness_levels/L3_workshop_use.mdx
+++ b/docs/readiness_levels/L3_workshop_use.mdx
@@ -31,9 +31,15 @@ will appoint or approve a principal investogator for the virtual lab.
 * Infrastructure supporter: Ensures the infrastructure can support the training sessions.
 
 ### Exit conditions
-The virtual lab becomes an operational service if the training material and guidelines are ready for normal (ivory) users to use.
+The virtual lab becomes an operational service if scientists taking part in the workshops, trainings, and hackathons
+ find that they can use the virtual lab in their research, and the training material and guidelines are ready for normal (ivory) users to use.
+In case none of the silver users keeps using the virtual labs after the workshops, the virtual lab should be archived.
 All previous criteria apply in addition to the following:
 
+* Community
+  * [ ] There is a virtual lab principal investogator or community of scientists who are willing to take care of the scientific
+  direction of the virtual lab.
+  * [ ] The is a community of users who benefit from doing their research in the virtual lab.
 * Dependencies
   * [ ] Dependencies are specified. The dependencies are in the dockerfile of the virtual lab,
 but should be duplicated in the metadata such that a person can in theory also run the source code on their own machine after installing the dependencies manually.
