--- a/docs/readiness_levels/index.mdx
+++ b/docs/readiness_levels/index.mdx
@@ -90,6 +90,10 @@ Figure1: The virtual lab moves through the readiness levels, from initial propos
 Users coming up with ideas for new experiments that can not be done in the existing virtual labs,
 can, in collaboration with LifeWatch, create a new virtual lab that fits their needs.
 
+Virtual labs do not need to reach operational service to be successful. A lab could also be the perfect fit for the scientific
+scenario of the golden users, but not have any other users who can apply it in their own research.
+It is important to weigh the scientific benefits of advancing a virtual lab to the next readiness level to the effort and cost involved in doing that.
+
 ## Sources
 * These recommendations are partially based on ideas presented in the paper [Introducing the FAIR Principles for research software](https://www.nature.com/articles/s41597-022-01710-x), the [Fair software checklist](https://fairsoftwarechecklist.net/v0.2/), and [fair-software.eu](https://fair-software.eu/recommendations/license).
 
